# rainbow

./: .gitignore  CMakeLists.txt  CMakePresets.json  main.cpp
bridge/: CMakeLists.txt
bridge/private/: Catalog.cpp  InMemoryCatalog.cpp  SqlContext.cpp
bridge/public/: Catalog.h  DbEntities.h  InMemoryCatalog.h  SqlContext.h
bridge/test/: CMakeLists.txt  InMemoryCatalogTest.cpp
light/: CMakeLists.txt
light/private/: Rule.cpp  RuleExecResult.cpp  SqlPlan.cpp  TreeNode.cpp
light/public/: Rule.h  RuleExecResult.h  SqlPlan.h  TreeNode.h
light/test/: CMakeLists.txt  RuleTest.cpp  SqlPlanTest.cpp  TreeNodeTest.cpp
orange/: CMakeLists.txt
orange/private/: Analyzer.cpp  RuleExecutor.cpp
orange/public/: Analyzer.h  RuleExecutor.h
orange/test/: CMakeLists.txt
red/: CMakeLists.txt
red/grammar/: SqlBaseLexer.g4  SqlBaseParser.g4
red/private/: AstBuilder.cpp  SqlParserVisitor.cpp  SqlPlan.cpp
red/public/: AstBuilder.h  SqlParserVisitor.h  SqlPlan.h
red/test/: AstBuilderTest.cpp  CMakeLists.txt
